deleting unnecessary codes

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 
 body{
     font-family:'Poppins', serif;
-    background-color: #d1d1d1;
+    background-color: #f1f1f1;
     background-image: url("../images/concrete_seamless.png");
 }
 
